# sosenki

./: .env.example  .gitignore  .payment-disabled.md  ARCHITECTURE_REVIEW.md  CODE_REVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE_2_COMPLETE.md  PHASE_3A_COMPLETE.md  PULL_REQUEST.md  README.md  WHATS_NEXT.md  WORKFLOW_REPORT.md  alembic.ini  pyproject.toml  setup-environment.sh  test_bot_manual.py  test_simple_bot.py  verify_foundation.py
.github/: copilot-instructions.md
.github/prompts/: feature.prompt.md
.github/workflows/: pages.yml  test-backend.yaml
.specify/memory/: constitution.md
backend/: SECURITY.md
backend/app/: config.py  main.py
backend/migrations/: env.py
backend/tests/: conftest.py
docs/: README.md  _config.yml  index.md
docs/presentation/: index.html  slides.md
logs/: .gitkeep
scripts/: analyze_dead_code.py  check_translations.py  setup-environment.sh
seeding/: README.md  __init__.py
seeding/cli/: __init__.py  seed.py
seeding/config/: __init__.py  seeding.json.example  seeding_config.py
seeding/core/: __init__.py  bills_seeding.py  credit_seeding.py  debit_seeding.py  electricity_seeding.py  errors.py  google_sheets.py  logging.py  parsers.py  property_seeding.py  seeding.py  seeding_utils.py  shared_electricity_bill_seeding.py  transaction_seeding.py
seeding/tests/: conftest.py  test_seeding_data_integrity.py  test_seeding_operations.py
specs/001-request-approval/: ARCHITECTURE.md  DEPLOYMENT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-seamless-telegram-auth/: PR_DESCRIPTION.md  SEAMLESS-TELEGRAM-AUTH.md  data-model.md  spec.md  tasks.md
specs/002-welcome-mini-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-payments-debts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-database-seeding/: ARCHITECTURE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-mini-app-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/api/: mcp_server.py  mini_app.py  payment.py  webhook.py
src/bot/: __init__.py  auth.py  config.py  handlers.py
src/cli/: __init__.py  seed.py
src/config/: seeding_config.py
src/migrations/: env.py
src/models/: __init__.py  access_request.py  account.py  admin_config.py  audit_log.py  bill.py  budget_item.py  client_request.py  payment.py  property.py  service_period.py  shared_electricity_bill.py  transaction.py  user.py
src/services/: __init__.py  admin_service.py  admin_utils.py  allocation_service.py  audit_service.py  auth_service.py  balance_service.py  bills_seeding.py  bills_service.py  config.py  credit_seeding.py  db.py  debit_seeding.py  electricity_reading_service.py  electricity_seeding.py  electricity_service.py  google_sheets.py  llm_service.py  locale_service.py  localizer.py  logging.py  notification_service.py  parsers.py  payment_seeding.py  payment_service.py  period_service.py  property_seeding.py  request_service.py  seeding.py  seeding_utils.py  shared_electricity_bill_seeding.py  transaction_seeding.py  user_service.py
src/utils/: __init__.py  parsers.py
tests/: conftest.py
tests/.disabled/: test_multi_period_balances.disabled.py  test_payment_api_contract.disabled.py  test_payment_endpoints.disabled.py
tests/contract/: test_admin_handlers.py  test_credentials.py  test_dop_column.py  test_electricity_bills_handler.py  test_handlers_error_cases.py  test_handlers_expanded.py  test_makefile_integration.py  test_mcp_endpoints.py  test_mini_app_critical.py  test_mini_app_endpoints.py  test_mini_app_endpoints_phase2.py  test_mini_app_error_scenarios.py  test_mini_app_expanded.py  test_mini_app_init.py  test_mini_app_logic.py  test_multi_period_carry_forward.py  test_payment_api_contract.py  test_payment_endpoints.py  test_request_endpoint.py  test_seeding_errors.py  test_translations_caching.py  test_webhook_expanded.py
(+126 files in other folders)
