[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sosenki"
version = "0.1.0"
description = "SOSenki: open-source Telegram Mini App for property management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-telegram-bot>=20.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: unit tests (fast, no I/O)",
    "contract: contract/API tests",
    "integration: integration tests (slow, with I/O)",
]

# Prevent setuptools automatic discovery from including non-code top-level dirs
[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["specs*", "docs*", "frontend*", ".github*"]

